--- a/app_server/views/travelDetails.hbs
+++ b/app_server/views/travelDetails.hbs
@@ -25,7 +25,8 @@
                                         <p>Start: {{{this.start}}}</p>
                                         <p>Resort: {{{this.resort}}}</p>
                                         <p>Per Person: {{{this.perPerson}}}</p>
-										<p>Description: {{{this.description}}}</p>
+										<p>Description: </p>
+										{{{this.description}}}
 									</li>
 								{{/each}}
 							</ul>
