--- a/app_admin/src/app/edit-trip/edit-trip.component.html
+++ b/app_admin/src/app/edit-trip/edit-trip.component.html
@@ -39,7 +39,7 @@
 
     <div class="form-group">
       <label>Start:</label>
-      <input type="string" formControlName="start" 
+      <input type="text" formControlName="start" 
         placeholder="Start" class="form-control"
         [ngClass]="{ 'is-invalid': submitted && f.start.errors }">
       <div *ngIf="submitted && f.start.errors">
