--- a/app_server/views/contact.hbs
+++ b/app_server/views/contact.hbs
@@ -16,25 +16,25 @@
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="index.html">Home</a>
+							<a href="/index">Home</a>
 						</li>
 						<li>
-							<a href="travel.html">Travel</a>
+							<a href="/travel">Travel</a>
 						</li>
 						<li>
-							<a href="rooms.html">Rooms</a>
+							<a href="/rooms">Rooms</a>
 						</li>
 						<li>
-							<a href="meals.html">Meals</a>
+							<a href="/meals">Meals</a>
 						</li>
 						<li>
-							<a href="news.html">News</a>
+							<a href="/news">News</a>
 						</li>
 						<li>
-							<a href="about.html">About</a>
+							<a href="/about">About</a>
 						</li>
 						<li class="selected">
-							<a href="contact.html">Contact</a>
+							<a href="/contact">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -43,7 +43,7 @@
 				<div class="box">
 					<div>
 						<div id="contact" class="body">
-							<h1>Contact</h1>
+							<h1>Contact HB</h1>
 							<form action="index.html" method="post">
 								<table>
 									<tbody>
@@ -85,25 +85,25 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="index.html">Home</a>
+						<a href="/index">Home</a>
 					</li>
 					<li>
-						<a href="travel.html">Travel</a>
+						<a href="/travel">Travel</a>
 					</li>
 					<li>
-						<a href="rooms.html">Rooms</a>
+						<a href="/rooms">Rooms</a>
 					</li>
 					<li>
-						<a href="meals.html">Meals</a>
+						<a href="/meals">Meals</a>
 					</li>
 					<li>
-						<a href="news.html">News</a>
+						<a href="/news">News</a>
 					</li>
 					<li>
-						<a href="about.html">About</a>
+						<a href="/about">About</a>
 					</li>
 					<li class="active">
-						<a href="contact.html">Contact</a>
+						<a href="/contact">Contact</a>
 					</li>
 				</ul>
 				<div id="connect">
