--- a/app_server/views/contact.hbs
+++ b/app_server/views/contact.hbs
@@ -16,7 +16,7 @@
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="/index">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
 							<a href="/travel">Travel</a>
@@ -43,7 +43,7 @@
 				<div class="box">
 					<div>
 						<div id="contact" class="body">
-							<h1>Contact HB</h1>
+							<h1>Contact HBS</h1>
 							<form action="index.html" method="post">
 								<table>
 									<tbody>
@@ -85,7 +85,7 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="/index">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
 						<a href="/travel">Travel</a>
