--- a/app_server/views/index.hbs
+++ b/app_server/views/index.hbs
@@ -16,7 +16,7 @@
 				<div id="navigation">
 					<ul>
 						<li class="selected">
-							<a href="/index">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
 							<a href="/travel">Travel</a>
@@ -42,7 +42,7 @@
 			<div id="contents">
 				<div id="adbox">
 					<img src="images/sea-sound.jpg" alt="Img">
-					<h1>HB Enjoy the Summer with Us!</h1>
+					<h1>HBS Enjoy the Summer with Us!</h1>
 					<p>
 						This website template has been designed by <a href="http://www.freewebsitetemplates.com/">Free Website Templates</a> for you, for free. You can replace all this text with your own text. You can remove any link to our website from this website template, you're free to use this website template without linking back to us. If you're having problems editing this website template, then don't hesitate to ask for help on the <a href="http://www.freewebsitetemplates.com/forums/">Forum</a>.
 					</p>
@@ -99,7 +99,7 @@
 			<div>
 				<ul class="navigation">
 					<li class="active">
-						<a href="/index">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
 						<a href="/travel">Travel</a>
