--- a/app_server/views/news.hbs
+++ b/app_server/views/news.hbs
@@ -16,7 +16,7 @@
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="/index">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
 							<a href="/travel">Travel</a>
@@ -82,7 +82,7 @@
 								</ul>
 							</div>
 							<div>
-								<h1>News HB</h1>
+								<h1>News HBS</h1>
 								<img src="images/kayak.jpg" alt="Img">
 								<h2>Experience Kayaking!</h2>
 								<span class="time">April 03, 2023<br> by: Juan De La Cruz</span>
@@ -105,7 +105,7 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="/index">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
 						<a href="/travel">Travel</a>
