--- a/app_server/views/travel.hbs
+++ b/app_server/views/travel.hbs
@@ -14,7 +14,7 @@
 				<div class="box">
 					<div>
 						<div class="body">
-							<h1>Travel</h1>
+							<h1>Travel HBS</h1>
 							<ul id="sites">
 								{{#each trips}}
 									<li>
