--- a/app_server/views/about.hbs
+++ b/app_server/views/about.hbs
@@ -16,7 +16,7 @@
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="/index">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
 							<a href="/travel">Travel</a>
@@ -43,7 +43,7 @@
 				<div class="box">
 					<div>
 						<div class="body">
-							<h1>About HB</h1>
+							<h1>About HBS</h1>
 							<h2>We Have Free Templates for Everyone</h2>
 							<p>
 								Our website templates are created with inspiration, checked for quality and originality and meticulously sliced and coded. What's more, they're absolutely free! You can do a lot with them. You can modify them. You can use them to design websites for clients, so long as you agree with the <a href="http://www.freewebsitetemplates.com/about/terms/">Terms of Use</a>. You can even remove all our links if you want to.
@@ -79,7 +79,7 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="/index">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
 						<a href="/travel">Travel</a>
