--- a/app_server/views/meals.hbs
+++ b/app_server/views/meals.hbs
@@ -16,7 +16,7 @@
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="/index">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
 							<a href="/travel">Travel</a>
@@ -43,7 +43,7 @@
 				<div class="box">
 					<div>
 						<div class="body">
-							<h1>Meals HB</h1>
+							<h1>Meals HBS</h1>
 							<ul id="foods">
 								<li>
 									<h2><a href="meals.html">SeaFood Special</a></h2>
@@ -82,7 +82,7 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="/index">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
 						<a href="/travel">Travel</a>
