--- a/app_server/views/rooms.hbs
+++ b/app_server/views/rooms.hbs
@@ -16,7 +16,7 @@
 				<div id="navigation">
 					<ul>
 						<li>
-							<a href="/index">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<li>
 							<a href="/travel">Travel</a>
@@ -43,7 +43,7 @@
 				<div class="box">
 					<div>
 						<div class="body">
-							<h1>Rooms HB</h1>
+							<h1>Rooms HBS</h1>
 							<ul id="rooms">
 								<li>
 									<a href="rooms.html"><img src="images/first-class.jpg" alt="Img"></a>
@@ -79,7 +79,7 @@
 			<div>
 				<ul class="navigation">
 					<li>
-						<a href="/index">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
 						<a href="/travel">Travel</a>
